--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   background-color: #1a202c;
   overflow: scroll;
   text-align: center;
+  color: white;
 }
 
 .container {
@@ -21,15 +22,12 @@
 }
 
 .header {
-  margin: 0;
   font-size: 50px;
   font-weight: bold;
-  color: white;
 }
 
 .sub-text {
   font-size: 25px;
-  color: white;
 }
 
 .gradient-text {
@@ -49,7 +47,6 @@
   cursor: pointer;
   font-size: 16px;
   font-weight: bold;
-  color: white;
 }
 
 .connect-wallet-button {
@@ -58,8 +55,8 @@
   animation: gradient-animation 4s ease infinite;
 }
 
-.submit-gif-button {
-  background: -webkit-linear-gradient(left, #4e44ce, #35aee2);
+.submit-wish-button {
+  background: -webkit-linear-gradient(left, #c158ce, #35aee2);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
   margin-left: 10px;
@@ -82,36 +79,11 @@
 }
 
 .footer-text {
-  color: white;
   font-size: 16px;
   font-weight: bold;
 }
 
-.gif-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  grid-gap: 1.5rem;
-  justify-items: center;
-  margin: 0;
-  padding: 0;
-}
-
-.gif-grid .gif-item {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  justify-self: center;
-  align-self: center;
-}
-
-.gif-item img {
-  width: 100%;
-  height: 300px;
-  border-radius: 10px;
-  object-fit: cover;
-}
-
-.connected-container input[type='text'] {
+.header-container input[type='text'] {
   display: inline-block;
   color: white;
   padding: 10px;
@@ -125,6 +97,22 @@
   margin: 50px auto;
 }
 
-.connected-container button {
+.header-container button {
   height: 50px;
 }
+
+.col-centered {
+  margin: 0 auto;
+}
+.wish-list {
+  font-size: 20px;
+}
+
+.wish-list ul {
+  text-align: left;
+  list-style-type: none;
+}
+.wish-list li {
+  padding: 2px;
+}
+
